@@ -3,6 +3,8 @@
 		      LIST OF CHANGES
 		      ===============
 
+  o fixed cleaning of temporary files when exiting abnormally
+
 version 1.34, 7/7/2003
 ======================
   o fixed behavior on DOS end-of-line
